--- a/ui/src/TokenVestingApp.css
+++ b/ui/src/TokenVestingApp.css
@@ -1,4 +1,5 @@
 .TokenVestingApp {
+  background-color: #fafbfc;
   text-align: center;
 }
 
@@ -6,8 +7,28 @@
   height: 100px;
   margin-bottom: 30px;
   padding: 20px;
-  background-color: #222;
+  background-color: white;
 
   text-align: left;
-  color: white;
+  color: black;
+  border-bottom: 1px solid #ecf0f2;
+}
+
+.header h3 {
+  display: inline-block;
+  margin: 0 10px;
+  padding: 0 15px;
+
+  border-left: 2px solid #5cb6e4;
+  font-size: 20px;
+  vertical-align: middle;
+  line-height: 50px;
+}
+
+.header a {
+  color: #004569;
+}
+
+.logo {
+  height: 50px;
 }
