--- a/src/TokenVestingApp.css
+++ b/src/TokenVestingApp.css
@@ -59,11 +59,25 @@
   text-align: center;
 }
 
-.emoji {
-  vertical-align: middle;
-}
-
 .action {
   position: absolute;
   right: 30px;
+}
+
+.spinner {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  padding-top: 200px;
+
+  background: rgba(255, 255, 255, .5);
+  z-index: 1;
+}
+
+.spinner img {
+  height: 50px;
+}
+
+.emoji {
+  vertical-align: middle;
 }
